--- a/rocket-planner/popup.css
+++ b/rocket-planner/popup.css
@@ -1,6 +1,7 @@
 body {
     width: 450px;
-    height: 562px;
+    min-height: 562px;
+    padding: 12px 12px 27px 12px;
 }
 .greeting img {
     position: absolute;
@@ -8,6 +9,7 @@ body {
     z-index: 100;
     top: -50px;
     right: -50px;
+    filter: drop-shadow(2px 0px 4px #222);
 }
 .greeting__type {
     color: #2f2f2f;
@@ -42,9 +44,7 @@ body {
 .actionInput__text {
     margin-bottom: 0.5rem;
 }
-.actionItems {
-    
-}
+
 .actionItem__item {
     background-color: gray;
     margin: 3px;
