add the ability for a user to mark items completed

--- a/rocket-planner/popup.css
+++ b/rocket-planner/popup.css
@@ -105,10 +105,34 @@ body {
 }
 .actionItem__checkBox i {
     color: #56e452;
+    opacity: 0;
 }
 .actionItem__check {
     width: 40px;
     display: flex;
     justify-content: center;
     cursor: pointer;
+}
+.actionItem__check:hover i {
+    opacity: 1;
+}
+.actionItem__delete {
+    color:rgba(151, 151, 151, 0.27);
+    width: 40px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+}
+.actionItem__item.completed {
+    background-color: #b0f1ab;
+}
+.actionItem__item.completed .actionItem__checkBox {
+    border-color: #56e452;
+}
+
+.actionItem__check  * {
+    pointer-events: none;
+}
+.actionItem__item.completed .actionItem__check i {
+    opacity: 1;
 }
