--- a/rocket-planner/popup.css
+++ b/rocket-planner/popup.css
@@ -1,7 +1,9 @@
 body {
     width: 450px;
-    min-height: 562px;
     padding: 12px 12px 27px 12px;
+}
+.main {
+    min-height: 562px;
 }
 .greeting img {
     position: absolute;
